# performance-profilling-notes

libxsmm/: conv2d.cpp  exe-ocr.script  exe-vis.script  exe.script
mkl-test/: CMakeLists.txt  FindLIKWID.cmake  FindMKL.cmake  chole.cpp  main.cpp
play-likwid/: Makefile  chpc_note.txt  conv-likw  conv-papi  conv2d.cpp  defmatmul.pro.txt  fmatmul.pro.txt  lik-exe.sh  matmul.default.c  matmul.fast.c  matmul.slow.c  smatmul.pro.txt  stream  stream.cpp  test-lik  test-lik-novec  test-lik.cpp
play-papi/: Makefile  note.txt  seq  test.cpp
