cmake_minimum_required(VERSION 3.12)

project(mkl-lik)
set(CMAKE_CXX_STANDARD 11)
#set(CMAKE_C_COMPILER /usr/bin/gcc)
#set(CMAKE_CXX_COMPILER /usr/bin/g++)
set(CMAKE_MODULE_PATH "/uufs/chpc.utah.edu/common/home/u0940848/Experiments/likwid-test/mkl-test" ${CMAKE_MODULE_PATH})
set(PROGFLAG  "-DN_M=1024 -DN_N=1024 -DN_K=1024")
set(CMAKE_CXX_FLAGS "${PROGFLAG}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++11 -fopenmp")
add_executable(mkl-lik main.cpp)
find_package(OpenMP REQUIRED)
find_package(MKL REQUIRED)
find_package(LIKWID REQUIRED)

if(MKL_FOUND)
    include_directories(${MKL_INCLUDE_DIR})
    target_link_libraries(mkl-lik "-Wl,--start-group" ${MKL_LIBRARY} "-Wl,--end-group -lpthread -lm -ldl")
else()
    message(WARNING "MKL libs not found")
endif()

if(LIKWID_FOUND)
	include_directories("${LIKWID_INCLUDE_DIR}")
	ADD_DEFINITIONS(-DLIKWID_PERFMON)
	target_link_libraries(mkl-lik "-Wl,--start-group" ${LIKWID_LIBRARY} "-Wl,--end-group")
else()
	message(WARNING "likwid libs not found")
endif()

